@@ -64,6 +64,7 @@ libpthread_a_SOURCES = pt-attr.c pt-attr-destroy.c pt-attr-getdetachstate.c \
 	pt-alloc.c							    \
 	pt-create.c							    \
 	pt-create-np.c							    \
+	pt-pool-np.c							    \
 	pt-equal.c							    \
 	pt-dealloc.c							    \
 	pt-detach.c							    \
