@@ -1,5 +1,5 @@
-/* Allocate kernel thread.  L4 version.
-   Copyright (C) 2003 Free Software Foundation, Inc.
+/* Thread pool for L4 threads.
+   Copyright (C) 2004 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -17,40 +17,36 @@
    write to the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
    Boston, MA 02111-1307, USA.  */
 
-#include <assert.h>
-#include <errno.h>
-#include <string.h>
-
 #include <pt-internal.h>
+#include <l4/thread.h>
 
+static pthread_mutex_t pool_lock = PTHREAD_MUTEX_INITIALIZER;
+
+l4_thread_id_t pool_list = l4_nilthread;
+
+/* Add the thread TID to the pthread kernel thread pool.  */
 int
-__pthread_thread_alloc (struct __pthread *thread)
+pthread_pool_add_np (l4_thread_id_t tid)
 {
-  error_t err;
-
-  /* The main thread is already running of course.  */
-  if (__pthread_num_threads == 1)
-    {
-      assert (__pthread_total == 1);
-      thread->threadid = l4_myself ();
-    }
-  else
-    {
-      thread->threadid = pthread_pool_get_np ();
-      if (thread->threadid != l4_nilthread)
-	return 0;
-
-#if 0
-      CORBA_Environment env;
-
-      env = idl4_default_environment;
-      err = thread_create (__task_server,
-			   L4_Version (L4_Myself ()),
-			   * (L4_Word_t *) &__system_pager,
-			   (L4_Word_t *) &thread->threadid, &env);
-      if (err)
-#endif
-	return EAGAIN;
-    }
+  __pthread_mutex_lock (&pool_lock);
+  /* FIXME: Do error checking.  */
+  l4_set_user_defined_handle_of (tid, pool_list);
+  pool_list = tid;
+  __pthread_mutex_unlock (&pool_lock);
   return 0;
+}
+
+
+/* Get the first thread from the pool.  */
+l4_thread_id_t
+pthread_pool_get_np (void)
+{
+  l4_thread_id_t tid;
+
+  __pthread_mutex_lock (&pool_lock);
+  /* FIXME: Do error checking.  */
+  tid = pool_list;
+  pool_list = l4_user_defined_handle_of (tid);
+  __pthread_mutex_unlock (&pool_lock);
+  return tid;
 }
