@@ -1,5 +1,5 @@
-/* Deallocate the kernel thread resources.  Mach version.
-   Copyright (C) 2000,02 Free Software Foundation, Inc.
+/* Deallocate the kernel thread resources.  L4version.
+   Copyright (C) 2000, 2002, 2004 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -26,6 +26,6 @@
 void
 __pthread_thread_halt (struct __pthread *thread)
 {
-  /* FIXME reuse thread somehow */
   l4_stop (thread->threadid);
+  pthread_pool_add_np (thread->threadid);
 }
